[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
dependencies = [
    "discord-py>=2.5.0",
    "nltk>=3.9.1",
    "openai>=1.64.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
